tests/ui/type-alias-impl-trait/inference-cycle.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/inference-cycle.rs:18:22
   |
LL |         let f: Foo = 22_u32;
   |                      ^^^^^^ expected `()`, got `u32`
   |
note: previous use here
  --> $DIR/inference-cycle.rs:10:9
   |
LL |         is_send(bar())
   |         ^^^^^^^^^^^^^^

error: aborting due to previous error

